yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-fetch-service
spec:
  selector:
    app: api-fetch-service
  ports:
    - port: 8000
      targetPort: 8000
  type: NodePort
